--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,28 @@
-plugins {
-    id 'groovy'
+ext {
+    mavenVersion = '3.6.1'
 }
 
-repositories {
-    jcenter()
+task build {
+    dependsOn ':maven-memory-profile-extension:build'
 }
 
-dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.5.6'
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'maven-publish'
 
-    testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
+    publishing {
+        publications {
+            extension(MavenPublication) {
+                from components.java
+            }
+        }
+
+        repositories {
+            maven {
+                name = 'JCenter'
+                url = "file://${buildDir}/repo"
+            }
+        }
+    }
 }
+
