--- a/test-project/pom.xml
+++ b/test-project/pom.xml
@@ -5,7 +5,7 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Memory com.thecodesmith.maven.memory.profile.Profiler Test Project</name>
+    <name>Memory Profiler Test Project</name>
 
     <dependencies>
         <dependency>
