--- a/subprojects/core/build.gradle
+++ b/subprojects/core/build.gradle
@@ -8,6 +8,8 @@ repositories {
 
 dependencies {
 	implementation 'org.codehaus.groovy:groovy:2.5.6'
+	implementation 'org.codehaus.groovy:groovy-jmx:2.5.6'
+	implementation 'org.codehaus.groovy:groovy-dateutil:2.5.6'
 	implementation "org.apache.maven:maven-core:$mavenVersion"
 	implementation "org.apache.maven:maven-embedder:$mavenVersion"
 	runtime 'ch.qos.logback:logback-classic:1.2.3'
