--- a/subprojects/core/build.gradle
+++ b/subprojects/core/build.gradle
@@ -17,3 +17,6 @@ dependencies {
 	testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
 }
 
+test {
+    testLogging.showStandardStreams = true
+}
